Hide timothy login on small screens to stop page squish

--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -72,3 +72,9 @@
     height: 50px;
     margin-left: 10px;
 }
+
+@media only screen and (max-width: 700px) {
+    .timothyContainer {
+        display: none;
+    }
+}
